--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -15,10 +15,10 @@
     <a class="btn btn-outline-info" onclick=addIngredientSlot() id="add-ingredient-btn">Add ingredient</a>
     
     <div id="steps-container">
-        <label>Step 1</label><br>
-        <input type="text" name="steps">
+        <label>Directions</label><br>
+        <textarea rows="5" cols="50" name="steps"></textarea>
     </div>
-    <a class="btn btn-outline-info" onclick=addStepsSlot() id="add-steps-btn">Add step</a>
+    <!-- <a class="btn btn-outline-info" onclick=addStepsSlot() id="add-steps-btn">Add step</a> -->
 
     <button>Submit</button>
 </form>
