--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,5 +1,15 @@
-<%- include("partials/header") %>
-<h1>This is the landing page</h1>
-<a class="btn btn-primary" href="/recipes">Show /recipes </a>
+<html>
+    <head>
+        <title>Astro</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+    </head>
 
-<%- include("partials/footer") %>
+    <body>
+        <div id="landing-body-content" class="d-flex align-items-center position-relative vh-100 col text-center">
+            <a class="btn btn-lg btn-primary" href="/recipes">Show recipes</a>
+        </div>
+
+    </body>
+</html>
+
