Improved CSS with Bootstrap

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,26 +1,30 @@
 body{
-    background-color: rgb(226, 235, 240) !important;
+    background-color: rgb(255, 255, 255) !important;
 }
-
-#body-content{
-    margin: 2% 10% 0% 10%;
-}
-
 #h1{
     font-size: 10rem; 
 }
 
-#navbar-content{
-    display: inline-flex;
-    margin-left: 9%;
-}
-.bg-light {
-    background-color: rgb(236, 238, 238) !important;
-}
 
 #landing-body-content{
     background-image: url("/images/landing.jpg");
 }
 #landing-body-content a{
     margin-left: 45vw;
+}
+
+.comment-wrapper .panel-body {
+    max-height:650px;
+    overflow:auto;
+}
+
+.comment-wrapper .media-list .media img {
+    width:64px;
+    height:64px;
+    border:2px solid #e5e7e8;
+}
+
+.comment-wrapper .media-list .media {
+    border-bottom:1px dashed #efefef;
+    margin-bottom:25px;
 }
