--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,41 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+        <nav class="navbar navbar-light bg-light">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/recipes">Astro</a>
+                </div>
+
+                <div>
+                    <ul class="nav justify-content-end">
+                        <% if(!currentUser){ %>
+                            <li class="nav-item" style="padding: 0.5rem;">
+                                <a class="nav-link" href="/login">Login</a>
+                            </li>
+                            <li class="nav-item" style="padding: 0.5rem;">
+                                <a class="nav-link" href="/register">Signup</a>
+                            </li>
+                        <% } else { %>
+                            <li class="nav-item" style="padding: 0.5rem;">
+                                <a class="btn btn-outline-info" href="/recipes/new">Add new recipe</a>
+                            </li>
+                            <li class="nav-item" style="padding: 0.5rem;">
+                                <a class="navbar-text">Signed in as <%=currentUser.username%></a>
+                            </li>
+                            <li class="nav-item" style="padding: 0.5rem;">
+                                <a class="nav-link" href="/logout">Logout</a>
+                            </li>
+                            
+                        <% } %>
+                    </ul>
+                </div>
+
+            </div>
+        </nav>
+
+        <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div id="navbar-content">
                 <a class="navbar-brand" href="/recipes">Astro</a>
                 <div id="navbar-buttons">
@@ -24,27 +58,9 @@
                 </div>
             </div>
             
-          </nav>
-          <div id="body-content">
+          </nav> -->
+          <div class="container">
         
-
-
-
-
-
-
-        <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" >Astro</a>
-
-            <% if(!currentUser){ %>
-                <a class="btn btn-primary" href="/login">Log in</a>
-                <a class="btn btn-primary" href="/register">Create account</a>
-            <% } else { %>
-                <a class="btn btn-primary" href="/recipes/new">Add new recipe</a>
-                <a class="btn btn-primary" href="/logout">Log out</a>
-                <p>Signed in as: <%=currentUser.username%></p>
-            <% } %>
-        </nav> -->
         
 
 
