--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -1,37 +1,97 @@
 <%- include("../partials/header") %>
 
-<h1>This is the show page</h1>
-<h1><%= recipe.name %></h1>
+<div>
+    <div id="recipe-header-info">
+        <h1><%= recipe.name %></h1>
+        <h3><%= recipe.description %></h3>
+    </div>
 
-<% if(currentUser && recipe.author.id.equals(currentUser._id)){ %>
-    <form method="GET" action="/recipes/<%=recipe.id%>/edit">
-        <button class="btn btn-primary">Edit recipe</button>
-    </form>
+    <div id="recipe-body">
+        <div id="recipe-img" class="mb-5" style="border-bottom: 1px solid rgba(0, 0, 0, 0.1)">
+            <img class="rounded mx-auto d-block img-fluid mb-4" src="<%=recipe.image%>">
+        </div>
+        
+        <div id="ingredients" style="border-bottom: 1px solid rgba(0, 0, 0, 0.1)">
+            <ul class="list-group col-5 mb-5">
+                <% recipe.ingredients.forEach(function(ingredient){  %>
+                    <li class="list-group-item"> <%= ingredient %> </li>
+                <% }) %>
+            </ul>
+        </div>
+        
+        <div id="directions" style="border-bottom: 1px solid rgba(0, 0, 0, 0.1)">
+            <p class="mt-3"><strong>Directions</strong></p>
+            <div id="directions-text-area" class="col-7">
+                <p><%=recipe.steps%></p>
+            </div>
+        </div>
+        
+        <% if(currentUser && recipe.author.id.equals(currentUser._id)){ %>
+            <div id="authorized-buttons" class="mt-3 form-inline">
+                <form class="form-inline" method="GET" action="/recipes/<%=recipe.id%>/edit">
+                    <button class="btn btn-secondary">Edit recipe</button>
+                </form>
+        
+                <form class="form-inline" method="POST" action="/recipes/<%=recipe.id%>?_method=DELETE">
+                    <button class="btn btn-outline-danger">Delete recipe</button>
+                </form>
+            </div>
+        <% } %>
 
-    <form method="POST" action="/recipes/<%=recipe.id%>?_method=DELETE">
-        <button class="btn btn-outline-warning">Delete recipe</button>
-    </form>
-<% } %>
 
-<form method="GET" action="/recipes/<%=recipe.id%>/comments/new"> 
-    <button class="btn btn-outline-info">Add comment</button>
-</form>
+        <div class="row bootstrap snippets">
+            <div class="col-md-9 col-md-offset-2 col-sm-16">
+                <div class="comment-wrapper">
+                    <div class="card">
+                        <div class="card-header">
+                            Comments section
+                        </div>
+                        <div class="card-body">
+                            <form method="POST" action="/recipes/<%=recipe.id%>/comments/new">
+                                <textarea type="text" name="text" placeholder="write a comment..." class="form-control" rows="3"></textarea>
+                                <button class="btn btn-info pull-right">Post</button>
+                            </form>
+                            
+                            <div class="clearfix"></div>
+                            <hr>
+                            <ul class="media-list">
+                                <!--  -->
+                                <% recipe.comments.forEach(function(comment){ %>
+                                    <li class="media">
 
-<h2>THESE ARE THE COMMENTS FROM RECIPE</h2>
-<% recipe.comments.forEach(function(comment){ %>
-    <h5><%= comment.text %></h5>
-    <h3><strong><%= comment.author.username %></strong></h3>
-    <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
-        <form method="GET" action="/recipes/<%=recipe.id%>/comment/<%=comment.id%>/edit"> 
-            <button class="btn btn-outline-secondary">Edit comment</button> 
-        </form>
+                                        <div class="media-body">
+                                            <span class="text-muted pull-right">
+                                                <small class="text-muted"> TIMESTAMPHERE</small>
+                                            </span>
 
-        <form method="POST" action="/recipes/<%=recipe.id%>/comment/<%=comment.id%>?_method=DELETE">
-            <button class="btn btn-outline-danger">Delete comment</button>
-        </form>
-    <% } %>
-    
-<% }); %>
+                                            <strong class="text-success">@<%=comment.author.username%></strong>
+                                            <p><%= comment.text %></p>
+
+                                            <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
+                                                <div class="form-inline">
+                                                    <form method="GET" action="/recipes/<%=recipe.id%>/comment/<%=comment.id%>/edit"> 
+                                                        <button class="btn btn-sm btn-outline-secondary">Edit comment</button> 
+                                                    </form>
+                                            
+                                                    <form method="POST" action="/recipes/<%=recipe.id%>/comment/<%=comment.id%>?_method=DELETE">
+                                                        <button class="btn btn-sm btn-outline-danger">Delete comment</button>
+                                                    </form>
+                                                </div>
+                                            <% } %>
+                                        </div>
+                                    </li>
+                                <% }) %>
+                            
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+        
+            </div>
+        </div>
+    </div>
+
+</div>
 
 
 
