--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -21,6 +21,7 @@
         
         <div id="directions" style="border-bottom: 1px solid rgba(0, 0, 0, 0.1)">
             <p class="mt-3"><strong>Directions</strong></p>
+            <p class="mt-1"><strong>Cooking time: <%= recipe.cookingTime %> minutes.</strong></p>
             <div id="directions-text-area" class="col-7">
                 <p><%=recipe.steps%></p>
             </div>
