--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -2,14 +2,23 @@
     <head>
         <title>Astro</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="/stylesheets/landing.css">
     </head>
 
     <body>
-        <div id="landing-body-content" class="d-flex align-items-center position-relative vh-100 col text-center">
-            <a class="btn btn-lg btn-primary" href="/recipes">Show recipes</a>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div id="landing-page-content">
+                        <h1>Astro</h1>
+                        <h3>Website For Creating And Sharing Recipes</h3>
+                        <hr>
+                        <a class="btn btn-lg btn-light" href="/recipes">Show recipes</a>
+                    </div>
+                </div>
+            </div>
         </div>
-
     </body>
 </html>
 
