--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,20 +2,21 @@
     <head>
         <title>Astro</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
         <script src=https://code.jquery.com/jquery-3.5.0.min.js></script>
     </head>
 
     <body>
 
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar navbar-inverse shadow-lg">
             <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="/recipes">Astro</a>
                 </div>
 
                 <div>
-                    <ul class="nav justify-content-end">
+                    <ul class="nav">
                         <% if(!currentUser){ %>
                             <li class="nav-item" style="padding: 0.5rem;">
                                 <a class="nav-link" href="/login">Login</a>
@@ -41,24 +42,6 @@
             </div>
         </nav>
 
-        <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div id="navbar-content">
-                <a class="navbar-brand" href="/recipes">Astro</a>
-                <div id="navbar-buttons">
-                    <ul class="navbar-nav navbar-inline">
-                        <% if(!currentUser){ %>
-                            <a class="nav-link" href="/login">Login</a>
-                            <a class="nav-link" href="/register">Signup</a>
-                        <% } else { %>
-                            <a class="btn btn-outline-info" href="/recipes/new">Add new recipe</a>
-                            <a class="nav-link">Signed in as <%=currentUser.username%></a>
-                            <a class="nav-link" href="/logout">Logout</a>
-                        <% } %>
-                    </ul>
-                </div>
-            </div>
-            
-          </nav> -->
           <div class="container">
         
         
