--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -13,7 +13,7 @@
     </div>
     <div class="form-group row">
         <div class="col-6">
-            <input type="text" class="form-control" name="description" placeholder="Recipe short description">
+            <input type="text" maxlength="100" class="form-control" name="description" placeholder="Recipe short description">
         </div>
         <div class="col-2">
             <input type="number" class="form-control" name="cookingTime" placeholder="Cooking time">
