--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(255, 255, 255) !important;
+    background-color: whitesmoke !important;
     font-family: 'Lato', sans-serif;
 }
 
