--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -5,10 +5,10 @@
 <form method="POST" action="/recipes/new"> 
     <div class="form-group row">
         <div class="col-3">
-            <input type="text" class="form-control" name="name" placeholder="Recipe name">
+            <input type="text" maxlength="50" class="form-control" name="name" placeholder="Recipe name">
         </div>
         <div class="col-7">
-            <input type="text" class="form-control" name="image" placeholder="Recipe image url">
+            <input type="text" maxlength="200" class="form-control" name="image" placeholder="Recipe image url">
         </div>
     </div>
     <div class="form-group row">
@@ -16,7 +16,7 @@
             <input type="text" maxlength="100" class="form-control" name="description" placeholder="Recipe short description">
         </div>
         <div class="col-2">
-            <input type="number" class="form-control" name="cookingTime" placeholder="Cooking time">
+            <input type="number" maxlength="3" class="form-control" name="cookingTime" placeholder="Cooking time">
         </div>   
     </div>
 
@@ -28,7 +28,7 @@
     
         <div id="ingredients-container" class="col-3" style="margin-top: 1rem; padding: 0;">
             <label>Ingredient 1</label><br>
-            <input type="text" class="form-control" name="ingredients">
+            <input type="text" maxlength="20" class="form-control" name="ingredients">
         </div>
         <a class="btn btn-outline-info" onclick=addIngredientSlot() id="add-ingredient-btn">Add ingredient</a>
     </div>
