--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -7,23 +7,39 @@
     </div>
 
     <div id="recipe-body">
-        <div id="recipe-img" class="mb-5" style="border-bottom: 1px solid rgba(0, 0, 0, 0.1)">
-            <img class="rounded mx-auto d-block img-fluid mb-4" src="<%=recipe.image%>">
+        <div class="row border-bottom mt-5">
+            <!-- First row, image with short summary of data -->
+            <div id="recipe-img" class="mb-5 col-sm-8 col-xs-12">
+                <img class="rounded mx-auto d-block img-fluid" src="<%=recipe.image%>">
+            </div>
+            <div id="recipe-data-box" class="col-sm-4 col-xs-12">
+                <div class="border border-secondary rounded p-3">
+                    <p>Cook time: <%= recipe.cookingTime %> minutes</p>
+                    <p>Ingredients: <%= recipe.ingredients.length %></p>
+                    <p>Servings: >TO BE ADDED></p>
+                    <hr style="border-top-color: whitesmoke;">
+                    <p>Favourites: >To be added></p>
+                </div>
+            </div>
         </div>
-        
-        <div id="ingredients" style="border-bottom: 1px solid rgba(0, 0, 0, 0.1)">
-            <ul class="list-group col-5 mb-5">
-                <% recipe.ingredients.forEach(function(ingredient){  %>
-                    <li class="list-group-item"> <%= ingredient %> </li>
-                <% }) %>
-            </ul>
+    
+        <div class="row border-bottom">
+            <!-- Second row, list of ingredients -->
+            <div id="ingredients" class="col-md-6 col-sm-8 col-xs-12 mt-5 mb-5">
+                <ul class="list-group">
+                    <% recipe.ingredients.forEach(function(ingredient){  %>
+                        <li class="list-group-item"> <%= ingredient %> </li>
+                    <% }) %>
+                </ul>
+            </div>
         </div>
-        
-        <div id="directions" style="border-bottom: 1px solid rgba(0, 0, 0, 0.1)">
-            <p class="mt-3"><strong>Directions</strong></p>
-            <p class="mt-1"><strong>Cooking time: <%= recipe.cookingTime %> minutes.</strong></p>
-            <div id="directions-text-area" class="col-7">
-                <p><%=recipe.steps%></p>
+
+        <div class="row border-bottom">
+            <div id="directions" class="col-md-8 col-xs-12">
+                <p class="mt-3"><strong>Directions</strong></p>
+                <div id="directions-text-area">
+                    <p><%=recipe.steps%></p>
+                </div>
             </div>
         </div>
         
@@ -44,7 +60,7 @@
             <div class="col-md-9 col-md-offset-2 col-sm-12">
                 <div class="comment-wrapper">
                     <div class="card">
-                        <div class="card-header">
+                        <div class="card-header" style="background-color: white;">
                             Comments section
                         </div>
                         <div class="card-body">
