--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -3,18 +3,21 @@
 <form action="/recipes/<%=recipe._id%>?_method=PUT" method="POST">
     <div class="form-group row">
         <div class="col-3">
-            <input type="text" class="form-control" name="name" value="<%=recipe.name%>">
+            <input type="text" class="form-control" name="name" placeholder="Recipe name" value="<%=recipe.name%>">
         </div>
         <div class="col-7">
-            <input type="text" class="form-control" name="image" value="<%=recipe.image%>">
+            <input type="text" class="form-control" name="image" placeholder="Image URL" value="<%=recipe.image%>">
         </div>
     </div>
     <div class="form-group row">
         <div class="col-6">
-            <input type="text" class="form-control" name="description" value="<%=recipe.description%>">
+            <input type="text" class="form-control" name="description" placeholder="Description" value="<%=recipe.description%>">
         </div>
         <div class="col-2">
-            <input type="number" class="form-control" name="cookingTime" value="<%=recipe.cookingTime%>">
+            <input type="number" class="form-control" name="cookingTime" placeholder="Cooking time" value="<%=recipe.cookingTime%>">
+        </div>
+        <div class="col-2">
+            <input type="number" class="form-control" name="servings" placeholder="Servings" value="<%=recipe.servings%>">
         </div>   
     </div>
 
