--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -1,7 +1,7 @@
 <%- include("../partials/header") %>
 
 <div>
-    <div id="recipe-header-info">
+    <div id="recipe-header-info" class="mt-4">
         <h1><%= recipe.name %></h1>
         <h3><%= recipe.description %></h3>
     </div>
@@ -16,9 +16,8 @@
                 <div class="border border-secondary rounded p-3">
                     <p>Cook time: <%= recipe.cookingTime %> minutes</p>
                     <p>Ingredients: <%= recipe.ingredients.length %></p>
-                    <p>Servings: >TO BE ADDED></p>
-                    <hr style="border-top-color: whitesmoke;">
-                    <p>Favourites: >To be added></p>
+                    <p>Servings: <%= recipe.servings %> </p>
+                
                 </div>
             </div>
         </div>
@@ -36,8 +35,8 @@
 
         <div class="row border-bottom">
             <div id="directions" class="col-md-8 col-xs-12">
-                <p class="mt-3"><strong>Directions</strong></p>
-                <div id="directions-text-area">
+                <p class="mt-3"><strong>Instructions</strong></p>
+                <div id="directions-text-area" style="white-space: pre-wrap;">
                     <p><%=recipe.steps%></p>
                 </div>
             </div>
