--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -59,7 +59,7 @@
             <div class="col-md-9 col-md-offset-2 col-sm-12">
                 <div class="comment-wrapper">
                     <div class="card">
-                        <div class="card-header" style="background-color: white;">
+                        <div class="card-header">
                             Comments section
                         </div>
                         <div class="card-body">
